# django-ke-counties

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  README.srt  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
django_ke_counties/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
django_ke_counties/migrations/: 0001_initial.py  0002_auto_20240505_2037.py
django_ke_counties/migrations/fixtures/: county_data.json
django_ke_counties/tests/: base_test.py  test_models.py
mysite/: settings.py  urls.py
