# pyproject.toml

[build-system]
requires = ['setuptools>=40.8.0']
build-backend = 'setuptools.build_meta'

target-version = "py311"

[tool.black]
target-version = ["py311"]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501", "E741"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.settings"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
